--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,11 +45,22 @@
 </head>
 <body>
   <nav class="navbar is-white">
-    <div class="container">
+    <div class="container" style="justify-content: space-between">
       <div class="navbar-brand">
         <a class="navbar-item brand-text" href="#">
           Fridge Tracker
         </a>
+      </div>
+      <div class="navbar-brand">
+        {% if user.is_authenticated %}
+        <a class="navbar-item" href="/accounts/logout">
+          Logout
+        </a>
+        {% else %}
+        <a class="navbar-item" href="/accounts/login">
+          Login
+        </a>
+        {% endif %}
       </div>
     </div>
   </nav>
